# rlhf

./: .gitignore  1_train.sh  2_reddit.sh  3_api.sh  PAPER_START.md  dbos-config.yaml  metadata.json  pyproject.toml  reddit.md  requirements.txt  setup.md  start_postgres_docker.py  statsmodel
imdbbot/: main.py
imdbbot/app/: model_hub.py  movie_db.py  sentiment.py  slack_bot.py
imdbbot/crawlers/: reddit_crawler.py
imdbbot/schemas/: movies.py
imdbbot/training/base/: deploy_to_lambdalabs.py  deploy_to_tensordock.py  train_model.py  train_on_lambdalabs.sh  train_on_tensordock.sh
imdbbot/training/sft/: train_reddit.py
migrations/: env.py
migrations/versions/: create_movie_tables.py
